# nav_ros2

./: README.md
bpx_ekf_odom_ros/: package.xml  setup.cfg  setup.py
bpx_ekf_odom_ros/bpx_ekf_odom_ros/: adaptive_obs.py  contact_detector.py  data_loader.py  odom_recorder.py
bpx_sdk_open/: .plan.md  deployment_guide.md
bpx_sdk_open/.claude/: settings.local.json
bpx_sdk_open/include/: bpx_sdk_config.h
bpx_sdk_open/visual_programming/: CMakeLists.txt  test_standup.cpp
bpx_sdk_open/visual_programming/frontend/: index.html
bpx_sdk_open/visual_programming/frontend/js/: app.js
bpx_sdk_open/visual_programming/frontend/js/blocks/: connection.js  flow.js  joint.js  sensor.js
bpx_sdk_open/visual_programming/frontend/js/dashboard/: imu_viz.js
bpx_sdk_open/visual_programming/frontend/js/generators/: bpx_lang.js
bpx_sdk_open/visual_programming/server/: command_executor.cpp  command_executor.h  main.cpp  network_config.cpp  network_config.h  robot_bridge.cpp  robot_bridge.h  state_publisher.cpp  state_publisher.h
install/: local_setup.sh  setup.sh
install/bpx_driver/share/ament_index/resource_index/package_run_dependencies/: bpx_driver
install/bpx_driver/share/bpx_driver/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/bpx_driver/share/bpx_driver/bpx/meshes/: l_thigh.mtl  r_thigh.mtl
install/bpx_driver/share/bpx_driver/config/: bpx_params.yaml
install/bpx_driver/share/bpx_driver/launch/: bpx_driver.launch.py  bpx_driver_ekf.launch.py
install/bpx_ekf_odom_ros/lib/bpx_ekf_odom_ros/: csv_player  ekf_odom_node  odom_recorder  walk_measure
install/bpx_ekf_odom_ros/share/bpx_ekf_odom_ros/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/bpx_ekf_odom_ros/share/bpx_ekf_odom_ros/launch/: ekf_odom.launch.py  ekf_odom_full.launch.py
install/nav2/share/ament_index/resource_index/parent_prefix_path/: nav2
install/nav2/share/nav2/: local_setup.sh  package.ps1  package.sh
install/nav2/share/nav2/config/: my_cartographer_2d.lua
install/nav2/share/nav2/launch/: cartographer_localization.launch.py
install/rf2o_laser_odometry/share/rf2o_laser_odometry/: package.sh
install/slam/share/slam/: local_setup.sh  package.ps1  package.sh
install/sllidar_ros2/lib/sllidar_ros2/: sllidar_node
install/sllidar_ros2/share/sllidar_ros2/: local_setup.sh  package.sh
log/: latest_build  latest_list
src/bpx_driver/: CMakeLists.txt  EKF_ODOM_USAGE.md  README.md  UPDATE_LOG.md
src/bpx_driver/bpx/meshes/: bpx_body.mtl  calf.mtl
src/bpx_driver/bpx/urdf/: bpx.urdf
src/bpx_driver/src/: bpx_driver_node.cpp
src/nav2/: CMakeLists.txt
src/nav2/config/: my_localization.lua
src/nav2/launch/: cartographer_localization.launch.py  cartographer_nav.launch.py
src/nav2/maps/: map529.pbstream  map529.pgm  map529.yaml  map5291.pbstream  map5291.pgm  map5291.yaml  my_map.pbstream  my_map.pgm  my_map.yaml
src/slam/config/: my_lidar_odometry.yaml
src/slam/maps/: 525.pgm  525.yaml  726.pgm  726.yaml  my_map.pgm  my_map.yaml  outdoor.pgm  outdoor.yaml
